--- a/index.html
+++ b/index.html
@@ -416,6 +416,12 @@
         }
     </script>
 
-
+<script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('service-worker.js')
+      .then(() => console.log('✔ Service Worker registrado'))
+      .catch(err => console.error('❌ Error registrando SW', err));
+  }
+</script>
 </body></html>
 <link rel="stylesheet" href="styles.css">
