--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
     <footer class="text-center mt-16 text-sm text-gray-500 dark:text-gray-400">
     <hr class="my-6 border-gray-300 dark:border-gray-700">
     <p>Esta app es gratuita, sin anuncios y hecha con amor para quien la necesite.</p>
-    <p class="mt-1">— Aline Reyes Castellanos ✨</p>
+    <p class="mt-1">— Aline RC ✨</p>
 </footer>
 
 </body></html>
