--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="msapplication-TileColor" content="#5D5CDE">
     
     <!-- PWA Manifest -->
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="/mipwa/manifest.json">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script>
         tailwind.config = {
