--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 
 <script>
   if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('service-worker.js')
+    navigator.serviceWorker.register('/mipwa/service-worker.js')
       .then(() => console.log('✔ Service Worker registrado'))
       .catch(err => console.error('❌ Error registrando SW', err));
   }
