--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- PWA Manifest -->
     <link rel="manifest" href="/mipwa/manifest.json">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
             theme: {
