Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Calcula costos, márgenes y precios de venta de recetas de manera profesional">
     <meta name="theme-color" content="#5D5CDE">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="Costos Recetas">
     <meta name="msapplication-TileColor" content="#5D5CDE">
@@ -14,7 +15,7 @@
     <!-- PWA Manifest -->
     <link rel="manifest" href="/mipwa/manifest.json">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-<script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
             theme: {
